--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "clsx": "^2.0.0",
     "firebase": "^10.0.0",
     "luxon": "^3.7.2",
-    "next": "^15.0.0",
+    "next": "15.5.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.48.0",
@@ -34,7 +34,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^15.0.0",
+    "eslint-config-next": "15.5.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0"
   }
